--- a/Views/Admin_Products_List.ejs
+++ b/Views/Admin_Products_List.ejs
@@ -94,17 +94,17 @@
                 <th>Quantity</th>
                 <th>Delete</th>
             </tr>
-            <% Allproducts.forEach(emp=> { %>
+            <% Allproducts.forEach(pro=> { %>
             <tr class="r">
-                <td><%= emp.ProductName %></td>
-                <td><%= emp.Description %></td>
-                <td><%= emp.Price %> LE</td>
-                <td><%= emp.Quantity %></td>
+                <td><%= pro.ProductName %></td>
+                <td><%= pro.Description %></td>
+                <td><%= pro.Price %> LE</td>
+                <td><%= pro.Quantity %></td>
                 <td>
                     <form action="/admin/deleteP" method="POST">
-                        <button type="submit" name="id" value="<%= emp._id %>">Delete</button>
+                        <button type="submit" name="id" value="<%= pro._id %>">Delete</button>
                     </form>
-                    <a href="/editp/<%= emp._id %>">Edit</a>
+                    <a href="/admin/editp/<%= pro._id %>">Edit</a>
                 </td>
             </tr>
             <% }) %>
